--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.9",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
